# gpr-200-fa2023-victor-diab

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment2_sunset/assets/vd/: shader.cpp  shader.h
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: background.frag  character.vert
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert  unlit.vert
assignments/personal_project/: CMakeLists.txt
assignments/personal_project/assets/: defaultLit.frag  defaultLit.vert  unlit.frag
core/: CMakeLists.txt
core/ew/: cameraController.cpp
core/ew/ewMath/: transformations.h
core/vd/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformations.h
